--- a/view/Home.html
+++ b/view/Home.html
@@ -2,11 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="estyle.css"/>
+    <title>Ecom site</title>
 </head>
 <body>
-
+    <nav>
+        <div class="navbar">
+            <p><h2>Shoe Website</h2><a class="register" href="#account">Account</a></p>
+             <hr>
+             <a  class="navlink" href="#Shop">Shop</a>
+             <a  class="navlink" href="#dataAnaysis">Data analysis</a>
+        </div>
+    </nav>
+    <br>
+    <section class="front">
+        <div class="shoeimage">
+            <img class="frontimg" src="shoe.png">
+        </div>
+        <div class="shoedesc">
+            <p><h1>Time for the Perfect shoes</h1></p>
+            <p>Best shoes at least prices</p>
+            <a href="#Shop">
+                <button class="shopbutton">Shop Now</button>
+            </a>
+        </div>
+    </section>
+    <section></section>
+    <br>
+    <section class="shopsec">
+        <div id="Shop" class="Shop">
+            <div class="Men">
+                <div class="shoe">
+                    <img src="bck.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+                <div class="shoe">
+                    <img src="bck.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+                <div class="shoe">
+                    <img src="bc.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+                <div class="shoe">
+                    <img src="bc.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+            </div>
+            <br>
+            <div class="Women">
+                <div class="shoe">
+                    <img src="bck.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+                <div class="shoe">
+                    <img src="bck.jpg" alt="Picture glt laga di h tune">
+                   <p> <button class="shoe1">Buy</button></p>
+                </div>
+                <div class="shoe">
+                    <img src="bc.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+                <div class="shoe">
+                    <img src="bc.jpg" alt="Picture glt laga di h tune">
+                    <p> <button class="shoe1">Buy</button></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
