--- a/view/Home.html
+++ b/view/Home.html
@@ -10,10 +10,11 @@
 <body>
     <nav>
         <div class="navbar">
-            <p><h2>Shoe Website</h2><a class="register" href="#account">Account</a></p>
-             <hr>
-             <a  class="navlink" href="#Shop">Shop</a>
-             <a  class="navlink" href="#dataAnaysis">Data analysis</a>
+            <h2>Shoe Website</h2>
+            <hr>
+            <a  class="navlink" href="#Shop">Shop</a>
+            <a  class="navlink" href="#salesAnalysis">Sales analysis</a>
+            <a class="navlink" href="#account">Account</a>
         </div>
     </nav>
     <br>
@@ -22,55 +23,103 @@
             <img class="frontimg" src="shoe.png">
         </div>
         <div class="shoedesc">
-            <p><h1>Time for the Perfect shoes</h1></p>
-            <p>Best shoes at least prices</p>
-            <a href="#Shop">
-                <button class="shopbutton">Shop Now</button>
+            <h1>Time for the Perfect shoes</h1>
+            Best shoes at least prices
+            <br>
+            <br>
+            <div class="shopbutton">
+                <a href="#Shop">
+                    <button >Shop Now</button>
             </a>
+            </div>
         </div>
     </section>
-    <section></section>
+    <br>
+    <section id="salesAnalysis" class="salesAnalysis">
+        <h1>Sales Analysis</h1>
+        <div class="graph">
+            <h2>Graph will be here</h2>
+        </div>
+        <div class="formdiv">
+            <form class="form" id="form">
+                <label>TOTAL REVENUE   <input type="number" id="totalrevenue"/>   <select name="my-select" id="revenue">
+                    <option value="opt1">Men</option>
+                    <option value="opt2">Women</option>
+                    <option value="opt3">Total</option>
+                  </select>   <button>Find</button>  
+                </label>
+                <br>
+                <label>TOTAL TODAY REVENUE   <input type="number" id="dailyrevenue"/>   <select name="my-select" id="todayrevenue">
+                    <option value="opt1">Men</option>
+                    <option value="opt2">Women</option>
+                    <option value="opt3">Total</option>
+                  </select>   <button>Find</button>  
+                </label>
+                <br>
+                <label>TOP SELLING SHOE    <input type="number" id="topshoe"/><select name="my-select" >
+                    <option value="opt1">Men</option>
+                    <option value="opt2">Women</option>
+                    <option value="opt3">Total</option>
+                  </select>   <button>Find</button>  
+                </label>
+                <br>
+                <label>STATUS OF SALES TARGET   <input type="number" id="salestargetstatus"/>   <select name="my-select" >
+                    <option value="opt1">Last month</option>
+                    <option value="opt2">Last Year</option>
+                  </select>   <button>Find</button>  
+                </label>
+                <br>
+                <label>ADD NEW SALES TARGET    <input type="number" id="salestargetnew"/>   <select name="my-select" >
+                    <option value="opt1">Last month</option>
+                    <option value="opt2">Last Year</option>
+                  </select>   <button>Add</button>  
+                </label>
+                <br>
+            </form>
+        </div>
+    </section>
     <br>
     <section class="shopsec">
         <div id="Shop" class="Shop">
             <div class="Men">
                 <div class="shoe">
                     <img src="bck.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
                 <div class="shoe">
                     <img src="bck.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
                 <div class="shoe">
                     <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
                 <div class="shoe">
                     <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
             </div>
             <br>
             <div class="Women">
                 <div class="shoe">
                     <img src="bck.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
                 <div class="shoe">
                     <img src="bck.jpg" alt="Picture glt laga di h tune">
-                   <p> <button class="shoe1">Buy</button></p>
+                   <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
                 <div class="shoe">
                     <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
                 <div class="shoe">
                     <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1">Buy</button></p>
+                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
                 </div>
             </div>
         </div>
     </section>
+
 </body>
 </html>
