--- a/view/Home.html
+++ b/view/Home.html
@@ -13,7 +13,7 @@
             <h2>Shoe Website</h2>
             <hr>
             <a  class="navlink" href="#Shop">Shop</a>
-            <a  class="navlink" href="#salesAnalysis">Sales analysis</a>
+            <a  class="navlink" href="salesanalysis.html" target="_blank">Sales analysis</a>
             <a class="navlink" href="#account">Account</a>
         </div>
     </nav>
@@ -35,87 +35,46 @@
         </div>
     </section>
     <br>
-    <section id="salesAnalysis" class="salesAnalysis">
-        <h1>Sales Analysis</h1>
-        <div class="graph">
-            <h2>Graph will be here</h2>
-        </div>
-        <div class="formdiv">
-            <form class="form" id="form">
-                <label>TOTAL REVENUE   <input type="number" id="totalrevenue"/>   <select name="my-select" id="revenue">
-                    <option value="opt1">Men</option>
-                    <option value="opt2">Women</option>
-                    <option value="opt3">Total</option>
-                  </select>   <button>Find</button>  
-                </label>
-                <br>
-                <label>TOTAL TODAY REVENUE   <input type="number" id="dailyrevenue"/>   <select name="my-select" id="todayrevenue">
-                    <option value="opt1">Men</option>
-                    <option value="opt2">Women</option>
-                    <option value="opt3">Total</option>
-                  </select>   <button>Find</button>  
-                </label>
-                <br>
-                <label>TOP SELLING SHOE    <input type="number" id="topshoe"/><select name="my-select" >
-                    <option value="opt1">Men</option>
-                    <option value="opt2">Women</option>
-                    <option value="opt3">Total</option>
-                  </select>   <button>Find</button>  
-                </label>
-                <br>
-                <label>STATUS OF SALES TARGET   <input type="number" id="salestargetstatus"/>   <select name="my-select" >
-                    <option value="opt1">Last month</option>
-                    <option value="opt2">Last Year</option>
-                  </select>   <button>Find</button>  
-                </label>
-                <br>
-                <label>ADD NEW SALES TARGET    <input type="number" id="salestargetnew"/>   <select name="my-select" >
-                    <option value="opt1">Last month</option>
-                    <option value="opt2">Last Year</option>
-                  </select>   <button>Add</button>  
-                </label>
-                <br>
-            </form>
-        </div>
-    </section>
-    <br>
     <section class="shopsec">
+        <h1>SHOES</h1>
         <div id="Shop" class="Shop">
+            <h3>MEN</h3>
             <div class="Men">
                 <div class="shoe">
-                    <img src="bck.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(0).jpg" alt="coming up soon">
+                    <p> <a href="" ><button class="shoe1" >Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="bck.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(1).jpg" alt="coming up soon">
+                    <p><a href="" > <button class="shoe1" >Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(2).jpg" alt="coming up soon">
+                    <p> <a href=""><button class="shoe1" >Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(3).jpg" alt="coming up soon">
+                    <p> <a href="" ><button class="shoe1">Buy</button></a></p>
                 </div>
             </div>
             <br>
+            <h3>WOMEN</h3>
             <div class="Women">
                 <div class="shoe">
-                    <img src="bck.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(4).jpg" alt="coming up soon">
+                    <p><a href="" ><button class="shoe1" >Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="bck.jpg" alt="Picture glt laga di h tune">
-                   <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(5).jpg" alt="coming up soon">
+                   <p><a href="" ><button class="shoe1" >Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(6).jpg" alt="coming up soon">
+                    <p> <a href="" ><button class="shoe1">Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="bc.jpg" alt="Picture glt laga di h tune">
-                    <p> <button class="shoe1" onclick="purchase.html">Buy</button></p>
+                    <img src="download(7).jpg" alt="coming up soon">
+                    <p> <a href="" ><button class="shoe1" >Buy</button></a></p>
                 </div>
             </div>
         </div>
