--- a/view/Home.html
+++ b/view/Home.html
@@ -10,14 +10,13 @@
 <body>
     <nav>
         <div class="navbar">
-            <h2>Shoe Website</h2>
+            <h1>SHOE WEBSITE</h1>
             <hr>
-            <a  class="navlink" href="#Shop">Shop</a>
-            <a  class="navlink" href="salesanalysis.html" target="_blank">Sales analysis</a>
-            <a class="navlink" href="#account">Account</a>
+            <a  class="navlink" href="#Shop"><button>Shop</button></a>
+            <a  class="navlink" href="salesanalysis.html" target="_blank"><button>Sales analysis</button> </a>
+            <a class="navlink" href="#account"><button>Account</button> </a>
         </div>
     </nav>
-    <br>
     <section class="front">
         <div class="shoeimage">
             <img class="frontimg" src="shoe.png">
@@ -29,7 +28,7 @@
             <br>
             <div class="shopbutton">
                 <a href="#Shop">
-                    <button >Shop Now</button>
+                    <button class="shopnowbutton" >Shop Now</button>
             </a>
             </div>
         </div>
@@ -37,6 +36,7 @@
     <br>
     <section class="shopsec">
         <h1>SHOES</h1>
+        <hr>
         <div id="Shop" class="Shop">
             <h3>MEN</h3>
             <div class="Men">
@@ -69,11 +69,11 @@
                    <p><a href="" ><button class="shoe1" >Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="download(6).jpg" alt="coming up soon">
+                    <img src="download(6).jpg"alt="coming up soon">
                     <p> <a href="" ><button class="shoe1">Buy</button></a></p>
                 </div>
                 <div class="shoe">
-                    <img src="download(7).jpg" alt="coming up soon">
+                    <img src="download(7).jpg" alt="coming up soon" >
                     <p> <a href="" ><button class="shoe1" >Buy</button></a></p>
                 </div>
             </div>
