--- a/view/salesanalysis.html
+++ b/view/salesanalysis.html
@@ -1,100 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-    body{background-color: antiquewhite;}
-    .salesAnalysis{ 
+      body {
+        background-color: antiquewhite;
+      }
+      .salesAnalysis {
         text-align: center;
-        width:90%;
+        width: 90%;
         border: 2px solid grey;
         margin: auto;
         margin-top: 50px;
-        background-color:brown;
+        background-color: brown;
         color: white;
-        }
-        .form{    display: flex;
-            flex-direction: column;
-        margin: auto;}
-        .data{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            margin: auto;}
-        label{
-            padding-right:20px;
-            margin: auto;
-        }
-        input{
-            margin: auto;
-        }
-        button{background-color: blueviolet;
-color: white;}
-</style>
-</head>
-<body>
+      }
+      .form {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+      }
+      .data {
+        justify-content: center;
+        margin: auto;
+      }
+      label {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        text-align: left;
+        width: 400px;
+        line-height: 26px;
+        margin-bottom: 10px;
+      }
 
-<section id="salesAnalysis" class="salesAnalysis">
-    <h1>Sales Analysis</h1>
-    <div class="graph">
+      input {
+        height: 20px;
+        flex: 0 0 200px;
+        margin-left: 10px;
+      }
+      select {
+        width: 60px;
+        height: max-content;
+        margin: 5px;
+      }
+
+      button {
+        background-color: blueviolet;
+        color: white;
+        height: 30px;
+        width: 60px;
+      }
+    </style>
+  </head>
+  <body>
+    <section id="salesAnalysis" class="salesAnalysis">
+      <h1>Sales Analysis</h1>
+      <div class="graph">
         <h3>Graph will be here</h3>
-    </div>
-    <div class="formdiv">
+      </div>
+      <div class="formdiv">
         <form class="form" id="form">
-
-            <div class="data"><label>TOTAL REVENUE
-            <input type="number" id="totalrevenue"/>   <select name="my-select" id="revenue">
+          <div class="data">
+            <label
+              >TOTAL REVENUE <input type="number" id="totalrevenue" />
+              <select name="my-select" id="revenue">
                 <option value="opt1">Men</option>
                 <option value="opt2">Women</option>
                 <option value="opt3">Total</option>
-              </select>   <button>Find</button></label>
-            </div >
-            <br>
-            <div class="data">
-                <label>TOTAL TODAY REVENUE</label>
-                <input type="number" id="dailyrevenue"/>   
-                <select name="my-select" id="todayrevenue">
-                    <option value="opt1">Men</option>
-                    <option value="opt2">Women</option>
-                    <option value="opt3">Total</option>
-                </select>  
-                <button>Find</button>
-            </div>  
-            <br>
-            <div class="data"><label>TOP SELLING SHOE </label>
-                <input type="number" id="topshoe"/>
-                <select name="my-select" >
-                    <option value="opt1">Men</option>
-                    <option value="opt2">Women</option>
-                     <option value="opt3">Total</option>
-              </select>   <button>Find</button>  
-            </div>
-            <br>
-            <div class="data"><label>STATUS OF SALES TARGET  </label>  
-                <input type="number" id="salestargetstatus"/> 
-                <select name="my-select" >
-                    <option value="opt1">Last month</option>
-                    <option value="opt2">Last Year</option>
-                </select>  
-                <button>Find</button> 
-            </div> 
-           
-            <br>
-            <div class="data">
-                <label>ADD NEW SALES TARGET </label>
-                <input type="number" id="salestargetnew"/>  
-                <select name="my-select" >
-                    <option value="opt1">Last month</option>
-                    <option value="opt2">Last Year</option>
-                </select>   
-                <button>Add</button>  
-            </div>
-            <br>
+              </select>
+              <button>Find</button>
+            </label>
+          </div>
+          <br />
+          <div class="data">
+            <label
+              >TOTAL TODAY REVENUE
+              <input type="number" id="dailyrevenue" />
+              <select name="my-select" id="todayrevenue">
+                <option value="opt1">Men</option>
+                <option value="opt2">Women</option>
+                <option value="opt3">Total</option>
+              </select>
+              <button>Find</button>
+            </label>
+          </div>
+          <br />
+          <div class="data">
+            <label >TOP SELLING SHOE
+              <output>Image wil be shown</output>
+              <select name="my-select">
+                <option value="opt1" id="opt1"  >Men</option>
+                <option value="opt2" id="opt2">Women</option>
+                <option value="opt3" id="opt3">Total</option>
+              </select>
+              <button>Find</button>
+            </label>
+          </div>
+          <br />
+          <div class="data">
+            <label
+              >STATUS OF SALES TARGET
+              <input type="number" id="salestargetstatus" />
+              <select name="my-select">
+                <option value="opt1">Last month</option>
+                <option value="opt2">Last Year</option>
+              </select>
+              <button>Find</button>
+            </label>
+          </div>
+
+          <br />
+          <div class="data">
+            <label
+              >ADD NEW SALES TARGET
+              <input type="number" id="salestargetnew" />
+              <select name="my-select">
+                <option value="opt1">Last month</option>
+                <option value="opt2">Last Year</option>
+              </select>
+              <button>Add</button>
+            </label>
+          </div>
+          <br />
         </form>
-    </div>
-</section>
-</body>
+      </div>
+    </section>
+  </body>
 </html>
